Rework BingoGame class and update all tests